ops/manifest1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-node-app
  template:
    metadata:
      labels:
        app: my-node-app
    spec:
      containers:
      - name: my-node-app-container
        image: airaad962/kubernetes-test-app:9cf6ce285f60d298d19a0a373341006bedb464ba
        ports:
        - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: my-node-app-service
spec:
  type: ClusterIP  
  selector:
    app: my-node-app
  ports:
    - protocol: TCP
      port: 3000        
      targetPort: 3000
